--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ PyPDF2==3.0.1
 openai==1.30.0
 httpx<0.27           
 gunicorn==21.2.0
+sqlalchemy>=2.0
+psycopg[binary]
+boto3
+flask-login
+bcrypt
+       
