--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.10",
     "esbuild": "^0.23.0"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
