--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@playwright/test": "^1.56.0",
+    "@types/node": "^24.7.1",
     "autoprefixer": "^10.4.21",
+    "esbuild": "^0.23.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.10",
-    "esbuild": "^0.23.0"
+    "tailwindcss": "^3.4.10"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
